2002-02-04  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.c: add [un]lock_sysctl
 
2002-02-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.h:
	* dae/oprofiled.c:
	* dae/opd_proc.c: free stuff on shutdown (to
	  clean dmalloc reports)
 
2002-02-03  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.1

	* TODO: update
 
2002-02-02  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.0.9
 
2002-02-02  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_nmi.c: fix stupid bug spotted by Bob
	  Montgomery
 
2002-02-01  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h: define REMAP_PAGE_RANGE
	* module/op_syscalls.c: use it (2.5.3 support)

2002-01-30  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/op_nmi.c: re-add explicit constant for all MSR_
	  constants.

2002-01-30  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in:
	* doc/oprofile.sgml:
	* module/compat22.h: remove support for kernel version
	  prior to 2.2.11

	* module/op_fixmap.c:
	* module/compat.h: small cleanup

	* module/oprofile.c: avoid multi-line literal string

	* pp/oprofpp_util.cpp: better to get_symbols() ;)

2002-01-29  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_fixmap.c: remap fake mapping on 2.2 as well
	  when necessary
 
2002-01-27  Philippe Elie  <ph_e@club-internet.fr>

	* module/Makefile.in: sorry, -Werror is only usefull
	  for test.

	* doc/oprofile.1.in: a few words about op_stop

	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: change pte_page_address definition
	  for 2.2.20

	* pp/opf_container.cpp: no warning when creating artificial symbols
	* pp/oprofpp_tuil.cpp: no warning for image without symbols

2002-01-27  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp:
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/opf_container.cpp: std namespace fixes.
 
2002-01-27  John Levon  <moz@compsoc.man.ac.uk>

	* pp/op_time.cpp: small hacky output cleanup
 