@@ -1,3 +1,12 @@
+2002-02-05  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/opf_filter.h: declare create_artificial_symbol()
+	* pp/oprofpp_util.cpp: show how elf symbols size could
+	  be handled.
+
+	* pp/oprofpp_util.cpp: add BSF_GLOBAL symbols to
+	  symbols of interest.
+
 2002-02-04  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module/oprofile.c: add [un]lock_sysctl
